--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
             <img src="./images/logo-white.svg">
         </div>
 
-        <div class="cartIcon">
-            <i class="fa fa-shopping-cart fa-2x"></i>
-        </div>
+        <button class="cartIcon">
+            <span class="cartCount">1</span>
+            <i class="fa fa-shopping-cart fa-2x"> </i>
+            
+           
+        </button>
 
     </nav>
    <div class="introText"><h1>Rest, Relax, Unwind</h1><h2>Embrace your choises</h2></div> <br> <br> <br> <br>
@@ -36,7 +39,20 @@
 </div>
 
 
+<div class="menu-overlay">
 
-    <script type="module"></script>
+<i class="fa fa-close fa-2x"></i>
+<ul type = "none">
+    <li> <a class="link" href="/"> <i class="fa fa-home fa-fw "></i>&nbsp;Home</a></li>
+    <li> <a class="link" href="/">  <i class="fas fa-couch fa-fw"></i>&nbsp; Products</a></li>
+    <li> <a class="link" href="/"> <i class="fas fa-book fa-fw"></i> &nbsp;About</a></li>
+
+</ul>
+
+</div>
+
+
+
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
