--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 </div>
 
 
+<div class="cart">
+    <i class="fa fa-close fa-2x cart-close"></i>
+
+</div>
+
+
 
     <script type="module" src="./script.js"></script>
 </body>
