--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   
           <ul type="none" class="links">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="/">Products</a></li>
+            <li><a href="./products.html">Products</a></li>
             <li><a href="./about.html">About</a></li>
           </ul>
   
